--- a/hiptest-publisher.conf
+++ b/hiptest-publisher.conf
@@ -2,6 +2,6 @@ token = 29313933763447501892402630459995210488248985218002572218
 site  = 'https://hiptest.net'
 language = 'javascript'
 output_directory = './test'
-push_format = junit
+push_format = cucumber-json
 overriden_templates = './templates'
 with_folders = true
